--- a/10_Theme_09_v2/Views/Home/Contact.cshtml
+++ b/10_Theme_09_v2/Views/Home/Contact.cshtml
@@ -36,7 +36,7 @@
             <div id="message-box-conact"></div>
             <div class="row">
                 <div class="col-sm-6">
-                    <h3 class="page-subheading">Gửi tin nhắn cho VinFish</h3>
+                    <h3 class="page-subheading">Gửi tin nhắn yêu cầu hỗ trợ</h3>
                     <div class="contact-form-box">                       
                         <div class="form-selector">
                             <label>Tên liên hệ </label>
