--- a/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -7,7 +7,7 @@
     }
 }
 <div id="page">
-    <div class="latest-blog our-features-box wow bounceInUp animated animated">
+    <div class="latest-blog our-features-box wow bounceInUp animated">
         <div class="new_title">
             <h2>Tư vấn thiết kế</h2>
         </div>
@@ -16,29 +16,26 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
                         <div class="item-image">
-                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế phòng khách</span></div></div>
-                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
+                            <div class="overlay"><div class="text"><span><a href="/tu-van-thiet-ke-phong-khach-b120">Tư vấn thiết kế phòng khách</a></span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/12017121621384153.jpg" />
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
                         <div class="item-image">
-                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế phòng ngủ</span></div></div>
-                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
-                        </div>
-                    </div>
-
-
-
-                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
-                        <div class="item-image">
-                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế phòng ăn</span></div></div>
-                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
+                            <div class="overlay"><div class="text"><span><a href="/tu-van-thiet-ke-phong-ngu-b122">Tư vấn thiết kế phòng ngủ</a></span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/22017121621540763.jpg" />
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
                         <div class="item-image">
-                            <div class="overlay"><div class="text"><span>Tư vấn thiết kế bếp đẹp</span></div></div>
-                            <img src="http://media.anpero.com/images/45/122017/22017121517065440.jpg" />
+                            <div class="overlay"><div class="text"><span><a href="/tu-van-thiet-ke-phong-an-b121">Tư vấn thiết kế phòng ăn</a></span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/12017121622122886.jpg" />
+                        </div>
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 wrapper left">
+                        <div class="item-image">
+                            <div class="overlay"><div class="text"><span><a href="/tu-van-thiet-ke-bep-dep-b123">Tư vấn thiết kế bếp đẹp</a></span></div></div>
+                            <img src="http://media.anpero.com/images/45/122017/22017121622132794.jpg" />
                         </div>
                     </div>
                 </div>
