--- a/10_Theme_09_v2/Views/Shared/_partial/_MainHeader_1.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainHeader_1.cshtml
@@ -11,8 +11,8 @@
         <div class="top-header">
             <div class="container">
                 <div class="row">
-                    <div class="top-fix">
-                        <div style="float:left;"> LIÊN HỆ : @Anpero.StringHelpper.FormatPhoneNumber(commonInfo.HotLine) | <a href="/tu-van-b120">TƯ VẤN NỘI THẤT</a></div>
+                    <div class="top-fix hearder-fix-t">
+                        <div style="float:left;"> LIÊN HỆ : @Anpero.StringHelpper.FormatPhoneNumber(commonInfo.HotLine)| <a href="/home/contact">HỖ TRỢ</a> | <a href="/tu-van-b120">TƯ VẤN NỘI THẤT</a></div>
                         <div class="fl-cart-contain">
                             <div class="mini-cart">
                                 <div class="basket"> <a href="/product/checkout"><span class="spN">0</span></a> </div>
