--- a/10_Theme_09_v2/assets/stylesheet/style.css
+++ b/10_Theme_09_v2/assets/stylesheet/style.css
@@ -144,7 +144,7 @@ header {
    margin-top:98px;
 }
 .search-input {
-    border: 1px solid #fb9009;
+    border: 1px solid #f1c40f;
 }
 .search-input input{
     border: 0px;
@@ -14070,7 +14070,7 @@ select#shipping-address-select {
 
 
 .page-heading {
-    padding: 120px 0 60px 0;
+    padding: 25px 0 40px 0;
     background-size: cover;
     border-bottom: none;
     text-align: center;
@@ -14276,10 +14276,12 @@ select#shipping-address-select {
     color: #0e0000;
 }
 
-.wrapper .item-image{
-    height:250px;
+.wrapper .item-image, .wrapper .item-image img{
+    height: 250px;
+    text-align:right;
+    width:auto;
 }
-.overlay .text {
+.overlay .text{
     color: #FFF;
     width: 100%;
     height: 100%;
@@ -14287,11 +14289,24 @@ select#shipping-address-select {
     letter-spacing: 2.5px;
 }
 .overlay .text span {
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 24px;   
     display: table-cell;
     text-align: center;
     vertical-align: middle;
     line-height:35px;
 }
-.wrapper{margin-bottom:30px;}
+    .overlay .text a {
+        color: white;
+        font-size: 24px;
+        font-weight: bold;
+    }
+    .wrapper {
+        margin-bottom: 15px;
+    }
+.slider-items .item{float:left;display:block;margin:15px;}
+.slider-items .item:last-child{margin-right:0px;float:right;}
+.hearder-fix-t {
+    font-weight: bold;
+    white-space: nowrap;
+    font-family: SFUFuturaBook, "Open Sans", Arial;
+}
