--- a/07_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/style.css
@@ -14480,7 +14480,7 @@ h1.divider:after, h2.divider:after, h3.divider:after, h4.divider:after, h5.divid
     margin-bottom:25px!important;
 }
 .latest-blog2{
-    margin:10px;
+    margin:0 0 10px 0;
 }
 .latest-blog2 img{
     height:100%;
