--- a/06_Shop_Onepage/Views/Home/Index.cshtml
+++ b/06_Shop_Onepage/Views/Home/Index.cshtml
@@ -55,13 +55,11 @@
                             <img src="/assets/images/455x480.png" alt="thiết kế web bán hàng">
                         </div>
                         <div class="item">
-                            <img src="~/assets/images/slide2.jpg" alt="thiết kế web quản lý bán hàng">
+                            <img src="/assets/images/slide2.jpg" alt="thiết kế web quản lý bán hàng">
                         </div>
                         <div class="item">
-                            <img src="~/assets/images/slide3.png" alt="web bán hàng giá rẻ">
+                            <img src="/assets/images/slide3.png" alt="web bán hàng giá rẻ">
                         </div>
-
-
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-7">
