--- a/06_Shop_Onepage/Views/Product/List.cshtml
+++ b/06_Shop_Onepage/Views/Product/List.cshtml
@@ -11,7 +11,7 @@
             <div class="text-center col-xs-12 col-sm-8 col-sm-offset-2">
                 <div class="page-title">
                     <h2>Dịch vụ thiết kế web</h2>
-                    <p>Với sợ hỗ trợ của hệ thống điệnt toán đám mây giúp trang web của quý khách luôn ổn định, hỗ trợ kỹ thuật 24/24</p>
+                    <p>Với sợ hỗ trợ của hệ thống điện toán đám mây, giúp trang web của quý khách luôn ổn định và được cập nhật miễn phí tự động theo hệ thống, hỗ trợ kỹ thuật 24/24</p>                    
                 </div>
             </div>
         </div>
@@ -19,52 +19,76 @@
             <div class="col-xs-12 col-sm-4 xs-bottom-40 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
                 <div class="single-price">
                     <div class="price-header">
-                        <img src="images/price-1.jpg" alt="price">
+                        <img src="/assets/images/dev.jpg" alt="price">
                         <div class="price-plan">
                             <div class="price-title">
-                                <h3>Basic</h3>
+                                <h3>Gói Lập trình</h3>
                             </div>
                             <div class="price-rate">
-                                <h3>$ 49.00</h3>
-                                <h5>Per Mounth</h5>
+                                <h3>360.000 đ</h3>
+                                <h5>Tháng</h5>
                             </div>
                         </div>
                     </div>
                     <div class="price-body">
                         <ul>
-                            <li>2 Dog walks</li>
-                            <li>1 Vet Visit</li>
-                            <li>1 Pet Spa</li>
-                            <li>10 Vet Calls</li>
-                            <li>Free Support</li>
+                            <li>Trang quản trị</li>
+                            <li>Web Service</li>
+                            <li>Tài liệu lập trình</li>
+                            <li>Tất cả các theme Anpero đã sử dụng</li>
+                            <li>Nhắn tin khi có đơn hàng miễn phí</li>
+                            <li>Gửi mail khi có đơn hàng miễn phí</li>
+                            <li>Không giới hạn dung ảnh</li>
+                            <li>Tối đa 100 sản phẩm</li>
+                            <li>Tối đa 100 tin bài</li>
+                            <li>Không giới hạn dung ảnh</li>
+                            <li>Không bao gồm hosting frontend</li>
+                            <li>Tự triển khai,tự setup web</li>
+                            <li>Hỗ trợ kỹ thuật, hướng dẫn lập trình</li>
+                            
                         </ul>
                     </div>
                     <div class="price-footer">
-                        <a href="#" class="price-battn">Order Now <i class="fa fa-angle-right"></i></a>
+                        <a href="#" class="price-battn">Đặt hàng <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-4 xs-bottom-40 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
                 <div class="single-price">
                     <div class="price-header">
-                        <img src="images/price-2.jpg" alt="price">
+                        <img src="/assets/images/webDs.PNG" />
                         <div class="price-plan">
                             <div class="price-title">
-                                <h3>Basic</h3>
+                                <h3>Web bán hàng</h3>
                             </div>
                             <div class="price-rate">
-                                <h3>$ 50.00</h3>
-                                <h5>Per Mounth</h5>
+                                <h3>720.000 đ</h3>
+                                <h5>Năm</h5>
                             </div>
                         </div>
                     </div>
                     <div class="price-body">
                         <ul>
-                            <li>2 Dog walks</li>
-                            <li>1 Vet Visit</li>
-                            <li>1 Pet Spa</li>
-                            <li>10 Vet Calls</li>
-                            <li>Free Support</li>
+                            <li>Sử dụng các mẫu có sẵn</li>
+                            <li>Quản lý sản phẩm, danh mục sản phẩm</li>
+                            <li>Quản lý đơn hàng, tạo đơn hàng, kiểm tra bảo hành</li>
+                            <li>Quản lý Khuyến Mãi</li>
+                            <li>Quản lý Blog</li>
+                            <li>Quản lý Đơn Hàng</li>
+                            <li>Quản lý Chi Nhánh</li>
+                            <li>Quản lý Khách Hàng</li>
+                            <li>Quản lý banner Quảng Cáo</li>
+                            <li>Quản lý plugin, javascript facebook, google</li>
+                            <li>Báo cáo tài chánh bán hàng</li>
+                            <li>Không giới hạn chi nhánh, nhân viên</li>
+                            <li>Tích hợp thanh toán Online miễn phí</li>
+                            <li>Nhắn tin khi có đơn hàng mới miễn phí</li>
+                            <li>Gửi mail khi có đơn hàng mới</li>
+                            <li>Tối đa 100 sản phẩm</li>
+                            <li>Tối đa 100 tin bài</li>
+                            <li>Đã bao gồm hosting năm đầu</li>
+                            <li>Không bao gồm phí tên miền</li>
+                            <li>Đăng ký tối thiểu 1 năm</li>
                         </ul>
                     </div>
                     <div class="price-footer">
@@ -75,24 +99,40 @@
             <div class="col-xs-12 col-sm-4 wow fadeIn" style="visibility: visible; animation-name: fadeIn;">
                 <div class="single-price">
                     <div class="price-header">
-                        <img src="images/price-3.jpg" alt="price">
+                        <img src="/assets/images/webDs.PNG" />
                         <div class="price-plan">
                             <div class="price-title">
-                                <h3>Basic</h3>
+                                <h3>Gói tự chủ</h3>
                             </div>
                             <div class="price-rate">
-                                <h3>$ 64.00</h3>
-                                <h5>Per Mounth</h5>
+                                <h3>720.000 đ</h3>
+                                <h5>/Năm + 5.000.000 công thiết kế</h5>
                             </div>
                         </div>
                     </div>
                     <div class="price-body">
                         <ul>
-                            <li>2 Dog walks</li>
-                            <li>1 Vet Visit</li>
-                            <li>1 Pet Spa</li>
-                            <li>10 Vet Calls</li>
-                            <li>Free Support</li>
+                            <li>Thiết kế giao diện web theo yêu cầu</li>
+                            <li>Quản lý sản phẩm, danh mục sản phẩm</li>
+                            <li>Quản lý đơn hàng, tạo đơn hàng, kiểm tra bảo hành</li>
+                            <li>Quản lý Khuyến Mãi</li>
+                            <li>Quản lý Blog</li>
+                            <li>Quản lý Đơn Hàng</li>
+                            <li>Quản lý Chi Nhánh</li>
+                            <li>Quản lý Khách Hàng</li>
+                            <li>Quản lý banner Quảng Cáo</li>
+                            <li>Quản lý plugin, javascript facebook, google</li>
+                            <li>Báo cáo tài chánh bán hàng</li>
+                            <li>Không giới hạn chi nhánh, nhân viên</li>
+                            <li>Tích hợp thanh toán Online miễn phí</li>
+                            <li>Nhắn tin khi có đơn hàng mới miễn phí</li>
+                            <li>Gửi mail khi có đơn hàng mới</li>
+                            <li>Tối đa 100 sản phẩm</li>
+                            <li>Tối đa 100 tin bài</li>
+                            <li>Đã bao gồm hosting năm đầu</li>
+                            <li>Không bao gồm phí tên miền</li>
+                            <li>Đăng ký tối thiểu 1 năm</li>
+
                         </ul>
                     </div>
                     <div class="price-footer">
