--- a/06_Shop_Onepage/assets/css/style.css
+++ b/06_Shop_Onepage/assets/css/style.css
@@ -982,22 +982,27 @@ textarea.form-control:focus {
 .single-price:hover .price-plan {
     color: #ffffff;
 }
-
+.price-title{
+    text-align:center;
+}
 .price-title h3 {
     font-weight: 600;
     font-size: 45px;
     text-transform: uppercase;
+    color:white;
 }
 
 .price-rate {
-    border-left: 1px solid #64BE43;
+    border-left: 1px solid #fff;
     margin-left: 15px;
     padding-left: 15px;
+    color:white;
 }
 
 .price-rate h3 {
     font-weight: 700;
-    font-size: 45px;
+    font-size: 30px;
+     white-space: nowrap ;
 }
 
 .price-rate h5 {
@@ -1010,8 +1015,12 @@ textarea.form-control:focus {
     margin: 0;
     padding: 0;
     list-style: none;
+    min-height:677px;
 }
-
+.price-body ul li{
+    text-align:left;
+    padding-left:15px;
+}
 .price-body ul li:before {
     content: "\f00c";
     font-family: fontawesome;
