--- a/07_Shop_MultiProduct/assets/stylesheet/style.css
+++ b/07_Shop_MultiProduct/assets/stylesheet/style.css
@@ -14487,3 +14487,4 @@ h1.divider:after, h2.divider:after, h3.divider:after, h4.divider:after, h5.divid
 }
 .s-title,.s-title{text-align:center;font-size:12px;}
 .large-image img{max-width:100%;}
+.product-view img{max-width:100%;}
